# agentic-blender

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: blender-smoke.yml  ci.yml
docs/: README.md
docs/v0.1.0/: PRD.md  TASKS.md
docs/v0.1.0/decisions/: 0001-project-name.md  0002-supported-environment.md  0003-python-and-uv-toolchain.md  0004-mcp-stdio-transport.md  0005-blender-extension-bridge.md  0006-file-based-ipc.md  0007-open-blender-reuse-policy.md  0008-add-primitive-tool.md  0009-window-screenshot-strategy.md  0010-export-as-blend-save.md  0011-agent-workflow.md  0012-generic-skill-distribution.md  0013-license.md
docs/v0.1.0/plans/: phase-0-bootstrap-and-tooling.md  phase-1-core-models-config-paths.md  phase-2-blender-discovery-extension-packaging.md
scripts/: quality.ps1
src/agentic_blender/: __init__.py  _paths.py  config.py
src/agentic_blender/blender/: __init__.py
src/agentic_blender/capture/: __init__.py
src/agentic_blender/ipc/: __init__.py
src/agentic_blender/mcp_adapter/: __init__.py
src/agentic_blender/models/: __init__.py  base.py  blender_version.py  errors.py  export.py  geometry.py  heartbeat.py  ipc.py  process.py  scene.py  screenshot.py  session.py  workflow.py
src/agentic_blender/platform/: __init__.py
src/agentic_blender/platform/windows/: __init__.py
src/agentic_blender/resources/: __init__.py
src/agentic_blender/tools/: __init__.py
tests/: test_config.py  test_package.py  test_paths.py
tests/models/: test_blender_version.py  test_errors.py  test_geometry.py  test_ipc.py  test_round_trip.py  test_workflow.py
