[project]
name = "agentic-blender"
version = "0.1.0"
description = "Agent-agnostic MCP server and Blender extension."
readme = "README.md"
authors = [
    { name = "riku-rio", email = "YosefBesn123@gmail.com" }
]
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "filelock>=3.13,<4",
    "mcp[cli]>=1.28.1,<2",
    "mss>=9,<11",
    "pillow>=10.3,<13",
    "platformdirs>=4,<5",
    "psutil>=6,<8",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pywin32>=306 ; sys_platform == 'win32'",
    "rich>=13,<15",
    "typer>=0.12,<1",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3,<3",
    "pre-commit>=4.6,<5",
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15,<0.16",
    "types-psutil>=7.2.2.20260518",
]
